Overdure update to ngnix 1.17.9

--- a/hooks/build
+++ b/hooks/build
@@ -3,5 +3,5 @@
 set -e
 
 # Build image using supplied ARGS
-echo "Building $IMAGE_NAME from $(git rev-parse --abbrev-ref HEAD) with $GIT_SHA1"
-docker build -t $IMAGE_NAME --build-arg VERSION="1.13.5" .
+echo "Building $IMAGE_NAME from $SOURCE_BRANCH using $SOURCE_COMMIT ..."
+docker build -t "$IMAGE_NAME" --build-arg VERSION="1.17.9" .
