Support any color. switch from png to ascii

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
         server_name  localhost;
 
         location / {
-            root   html;
+            root   /usr/share/nginx/html;
             index  index.html index.htm;
         }
 
